# cloud_CUA

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  PRODUCT.md  PRODUCT_TARGET_STATE.md  README.md  VALIDATION_EVIDENCE.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.codexplan/: design.md  requirements.md  tasks.md
agent-test-projects/: README.md
agent-test-projects/invoiceops/: .env.example  .gitignore  AGENT_TEST_SPEC.md  README.md  agent-test.json  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
agent-test-projects/receipt-split/: AGENT_TEST_SPEC.md  README.md  agent-test.json  index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
cloud_cua/: __init__.py  agent_test_contract.py  amplify_artifact.py  api_client.py  approvals.py  aws_cleanup.py  aws_cli.py  aws_costs.py  aws_eval_catalog.yaml  aws_evals.py  aws_runtime_config.py  aws_skill_generation.py  browser_profile.py  cli.py  cloud_identity.py  codex_config.py  codex_voice.py  container_image.py  container_runtime.py  cost_monitor.py  credentials.py  dashboard.py  deployment_checkpoints.py  deployment_contract.py  deployment_milestones.py  doctor.py  explanations.py  h_admin.py  h_runner.py  h_runner_worker.py  h_session_manager.py  h_skills.py  handoff.py  lessons.py  mcp_server.py  mode_policy.py  models.py  orchestrator.py  packaging.py  paths.py  (+14 more)
cloud_cua/deployments/: __init__.py  amplify.py  aws_general.py  gcp_cloud_run.py  s3_static.py
cloud_cua/skills/: aws_amplify.yaml  aws_ecs_express.yaml  aws_eval_api_gateway.yaml  (+50 more)
docs/: agent-test-validation.md  aws-h-evaluation-catalog.md
readme files/: description.md  luma.md
scripts/: install.ps1  install.sh  visual-dashboard-smoke.mjs
tests/: conftest.py  test_agent_test_contract.py  test_amplify_deployment.py  test_aws_cleanup.py  test_aws_evals.py  test_aws_target_verifiers.py  test_cli.py  test_cloud_identity.py  test_codex_voice.py  test_core.py  test_costs.py  test_gradium_streaming.py  test_h_admin.py  test_h_session_manager.py  test_handoff.py  test_mcp_tools.py  test_playwright_verifier.py  test_repo_verifier.py  test_runtime_config.py  test_s3_deployment.py  test_server.py  test_service_runtime.py  test_skills.py  test_voice_dashboard_browser.py  test_voice_stream.py
(+72 files in other folders)
