[project]
name = "cloud-cua"
version = "0.1.0"
description = "Local Codex-connected deployment assistant using H Company computer use."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "mcp>=1.0",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
  "websockets>=12,<16",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
h = [
  "hai-agents[browser]>=1.0.6",
]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[project.scripts]
cloud-cua = "cloud_cua.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:eval_protocol"

[tool.setuptools.package-data]
cloud_cua = ["skills/*.yaml"]
